codepkg/objects/Program_Document__c.object
<CustomObject>
    <fields>
        <fullName>Applicable_Criteria__c</fullName>
        <label>Applicable Criteria</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>Document Category</fullName>
                </value>
                <value>
                    <fullName>Document Name</fullName>
                </value>
                <value>
                    <fullName>Document Sub Category</fullName>
                </value>
                <value>
                    <fullName>Project Stage</fullName>
                </value>
                <value>
                    <fullName>Document Creation Method</fullName>
                </value>
                <value>
                    <fullName>Document  Format</fullName>
                </value>
                <value>
                    <fullName>Sub Recipient Entity Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Category__c</fullName>
        <label>Document Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Obligating</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Request</fullName>
                </value>
                <value>
                    <fullName>Supplement</fullName>
                </value>
                <value>
                    <fullName>Property Owner ID</fullName>
                </value>
                <value>
                    <fullName>Proof of Ownership</fullName>
                </value>
                <value>
                    <fullName>Proof of Rental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Creation_Method__c</fullName>
        <label>Document Creation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manually Uploaded</fullName>
                </value>
                <value>
                    <fullName>System Generated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Format__c</fullName>
        <label>Document  Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>.pdf</fullName>
                    <label>PDF</label>
                </value>
                <value>
                    <fullName>.docx</fullName>
                    <label>Word</label>
                </value>
                <value>
                    <fullName>.zip</fullName>
                    <isActive>false</isActive>
                    <label>.zip</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Sub_Category__c</fullName>
        <label>Document Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Document_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Disaster</fullName>
                </value>
                <value>
                    <fullName>Non Disaster</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Filter_Clause__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Filter Clause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <label>Is Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Object__c</fullName>
        <description>Object on which  Document is to be created.</description>
        <inlineHelpText>Object on which  Document is to be created.</inlineHelpText>
        <label>Parent Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Payment Request</fullName>
                </value>
                <value>
                    <fullName>HH Application</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                    <isActive>false</isActive>
                    <label>Application</label>
                </value>
                <value>
                    <fullName>Application Extensions</fullName>
                    <isActive>false</isActive>
                    <label>Application Extensions</label>
                </value>
                <value>
                    <fullName>Project Site</fullName>
                    <isActive>false</isActive>
                    <label>Project Site</label>
                </value>
                <value>
                    <fullName>Work Schedule</fullName>
                    <isActive>false</isActive>
                    <label>Work Schedule</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Program Documents</relationshipLabel>
        <relationshipName>Program_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Document_Filter_Clause__c</fullName>
        <description>Filter clause to create project document. Document will get created only after matching condition.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide filter clause. You can generate filter clause from workbench.</inlineHelpText>
        <label>Project Document Filter Clause</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <label>Project Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Obligating</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>De Obligation</fullName>
                </value>
                <value>
                    <fullName>Closeout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubRecipientEntityType__c</fullName>
        <label>Sub Recipient Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>State Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Program Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Document_Name__c</columns>
        <columns>Program__c</columns>
        <columns>Document_Category__c</columns>
        <columns>Document_Sub_Category__c</columns>
        <columns>Project_Document_Filter_Clause__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PDM-{00000}</displayFormat>
        <label>Program Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>